...
            "state": "translated",
            "value": "将此笔记添加到或移出收藏。"
          }
        }
      }
    },
    "Agenda": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Agenda"
          }
...
            "state": "translated",
            "value": "请先在设置中连接GitHub仓库。"
          }
        }
      }
    },
    "Connect a Repository": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Repository verbinden"
          }
...
            "state": "translated",
            "value": "文件夹，%@"
          }
        }
      }
    },
    "Git Commands": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Git-Befehle"
          }
...
            "state": "translated",
            "value": "笔记，%@"
          }
        }
      }
    },
    "Notes": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Notizen"
          }
...
            "state": "translated",
            "value": "打开系统的提醒事项权限请求。"
          }
        }
      }
    },
    "OrgSync": {
      "shouldTranslate": false
    },
    "OrgSync (managed)": {
      "localizations": {
        "de": {
          "stringUnit": {
...
            "state": "translated",
            "value": "设置“即将到来”议程中显示的天数。"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Einstellungen"
          }
...
            "state": "translated",
            "value": "标题"
          }
        }
      }
    },
    "Today's Tasks": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Heutige Aufgaben"
          }
...
            "state": "translated",
            "value": "%1$@你有一个任务：%2$@。"
          }
        }
      }
    },
    "Your notes, in sync.": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Deine Notizen, synchron."
          }
...
